[package]
name = "isochronous_finite_fields"
version = "1.0.1"
authors = ["Thijs Raymakers <thijs@raymakers.nl>"]
edition = "2018"
description = "Isochronous implementation of GF(2^8) arithmetic"
keywords = ["finite", "galois", "isochronous", "field", "fields"]
categories = ["mathematics", "algorithms", "cryptography", "no-std", "science"]
license = "MIT"
repository = "https://github.com/ThijsRay/isochronous_finite_fields"
readme = "README.md"

[badges]
maintenance = { status = "as-is" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "mul_inv"
harness = false

[[bench]]
name = "mul"
harness = false
